# motor-module

./: .gitignore  .pre-commit-config.yaml  AK60_Mount.3mf  AK60_Spool.3mf  CAN_IMPLEMENTATION_SUMMARY.md  CAN_QUICK_REFERENCE.md  CAN_SETUP.md  CLAUDE.md  Dockerfile  Frame_to_AK60_Mount.3mf  Frame_to_Jetson_Mount.3mf  Jetson_Mount.3mf  Leg_with_2IMU.3mf  Makefile  Motor_Case.3mf  README.md  Rod_Adapter_Motor.3mf  Spool_V2.3mf  can0.service  can_demo.py  motion_capture_test.py  motor_class_refactor_changes.md  pyproject.toml  quick_test.py  repo_tree.py  setup_can.sh  simple_test.py  spin_test.py  stress_test_can.py  test_our_implementation.py  test_servo_mode.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  claude-review.yml  docker.yml
Test Rig CAD files/: Foot.3mf  Jetson_Mount.3mf  Leg_with_2_IMU's.3mf  Motor_Case.3mf  Rod_Adapter_Jetson.3mf  Rod_Adapter_Motor.3mf  Spool.3mf
data/logs/: mocap_2026-02-25_16-19-54.csv  mocap_2026-02-25_16-31-19.csv  mocap_2026-02-25_16-36-56.csv  mocap_2026-02-25_16-37-18.csv  mocap_2026-02-25_16-40-37.csv  mocap_2026-02-25_16-46-31.csv  mocap_2026-02-25_16-49-32.csv  mocap_2026-02-25_16-51-36.csv  mocap_2026-02-25_16-53-36.csv  mocap_2026-02-25_17-00-42.csv  mocap_2026-02-25_17-05-15.csv  mocap_2026-02-25_17-13-39.csv  mocap_2026-02-25_17-16-16.csv  mocap_2026-02-25_17-17-59.csv  mocap_2026-02-25_17-27-06.csv  mocap_2026-02-25_17-29-06.csv  mocap_2026-02-25_17-30-53.csv  mocap_2026-02-25_17-31-55.csv  mocap_2026-02-25_17-41-11.csv  mocap_2026-02-25_17-45-11.csv  mocap_2026-02-25_18-02-02.csv  mocap_2026-03-02_10-06-15.csv  mocap_2026-03-02_10-18-11.csv  mocap_2026-03-02_11-39-13.csv  (+23 more)
docs/: AK60-6 Manual.txt  AK60_6_MANUAL_ACTIONABLE_NOTES.md  CAN_DEBUG_LOG.md  CAN_IMPLEMENTATION_CHAPTER.tex  CAN_IMPLEMENTATION_JOURNEY.md  CAN_QUICK_REFERENCE.md  CAN_SETUP_GUIDE.md  CAN_TELEMETRY_API.md  CAN_TESTING.md  CAN_TROUBLESHOOTING.md  CHANGELOG_2026-02-25.md  CHANGELOG_2026-03-02.md  CHANGELOG_2026-03-03.md  CHANGELOG_2026-03-09.md  MOTION_CAPTURE_PROGRESS.md
scripts/: Pendulum.py  README.md  can_bus_monitor.sh  can_demo.py  can_hard_reset.sh  clock_arm_test.py  diagnose_can.py  drive_test.py  mit_mode_test.py  mit_position_steps.py  mocap_velocity_test.py  motion_capture_test.py  motion_capture_vel.py  pid_motor_test.py  plot_graph.py  quick_test.py  reset_degree.py  scan_ids.py  simple_test.py  spin_test.py  stress_test_can.py  test_our_implementation.py  test_set_velocity.py  test_velocity_loop.py  verify_frequency.py  verify_set_frequency.py  verify_set_velocity.py
tests/: can_test.py  conftest.py  cube_mars_motor_can_test.py  cube_mars_motor_test.py  fault_code_test.py  hardware_can_test.py  hardware_test.py  main_test.py  manual_our_implementation_test.py  manual_servo_mode_test.py  mit_mode_packer_test.py  motor_status_parser_test.py  plot_ch4_validation_test.py  utils_test.py
(+21 files in other folders)
