[project]
name = "motor_python"
version = "0.0.7"
description = "CubeMars motor module for Aries exosuits."
readme = "README.md"
authors = [{ name = "Tsmorz", email = "tony.smoragiewicz@tum.de"},{ name = "Hannes", email = "hannes.nguyen@tum.de" }]
requires-python = ">=3.11,<3.14"

# --- Core dependencies: NO hardware here ---
dependencies = [
    "numpy>=2.2.3",
    "loguru>=0.7.3",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
  "ruff>=0.6.9",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pytest-rerunfailures>=15.0",
  "pre-commit>=4.1.0",
  "coveralls>=4.0.1",
  "pyright>=1.1.407",
]
hw = [
  "python-can>=4.4.0",
]
no_hw = [
]
[project.urls]
homepage = "https://github.com/TUM-Aries-Lab/motor-module"

[tool.ruff]
line-length = 88
fix = true

lint.select = [
  "E","F","W","C90","I","N","D","UP","B","S","YTT","Q","PL","RUF","T20","F841","ERA001",
]

lint.ignore = [
  "D203","D213","E501","N803","N806","D415","S101","E203","E731",
  "D107","PLR2004","S607","S605","S603",
  "RUF002","RUF003",  # Unicode × and – in docstrings/comments are intentional
]

[tool.ruff.lint.extend-per-file-ignores]
# Lazy subprocess import inside methods is intentional
# subprocess.run without check= is handled via try/except
"src/motor_python/can_utils.py" = ["PLC0415", "PLW1510"]

# Complexity limit – feedback/refresh loops are inherently complex
# Too many returns and lazy imports for socket flags
"src/motor_python/cube_mars_motor_can.py" = ["C901", "PLR0911", "PLC0415"]

# Too many return statements in feedback parser
"src/motor_python/motor_status_parser.py" = ["PLR0911"]

# Test helpers may need >5 args for full fixture coverage
# Pytest fixtures don't need public docstrings
# Lazy mocks are acceptable in test fixtures
"tests/*" = ["PLR0913", "D103", "PLC0415"]


[tool.ruff.lint.isort]
known-first-party = ["motor_python"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
omit = [
  "src/motor_python/examples.py",
  "src/motor_python/examples_can.py",
  "tests/can_test.py",
  "src/motor_python/__main__.py",
]

[tool.pytest.ini_options]
markers = [
    "hardware: CAN hardware tests — require motor on can0, NO UART cable (deselect with '-m \"not hardware\"')",
    "hardware_uart: UART/serial hardware tests — require R-Link cable, incompatible with CAN tests",
]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# Tell hatchling where the package lives (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/motor_python"]

[tool.hatch.build.targets.sdist]
include = [
  "src/motor_python",
  "README.md",
  "LICENSE",
]
